Fixes sidebar responsiveness on tablets and mobiles. Adds logo.

--- a/src/components/Burger/styles.scss
+++ b/src/components/Burger/styles.scss
@@ -15,7 +15,7 @@
   right: 20px;
   background: var.$burger-icon no-repeat;
 
-  @media (max-width: var.$tablet__small) {
+  @media (max-width: var.$mobile__x-small) {
     display: block;
   }
 }
